# Minimal-Tuner

./: .eslintrc.json  Cargo.toml  README.md  eslint.config.mjs  jest.config.js  next.config.js  package.json  tsconfig.json  tsconfig.test.json
.github/workflows/: actions.yml
__tests__/: gainControl.test.ts  jsxtest.test.tsx  noteConversion.test.ts  pitchDetection.test.ts  seo.test.tsx
pitch-detector/: Cargo.toml
pitch-detector/src/: lib.rs
public/: robots.txt  sitemap.xml
src/: lib.rs
src/app/: globals.css  layout.tsx  page.module.css  page.tsx  providers.tsx
src/app/[locale]/: page.tsx
src/components/: SettingsModal.tsx  Tuner.tsx  TunerClient.tsx  TunerDisplay.tsx
src/lib/: constants.ts  gainControl.ts  note.ts  noteConversion.ts  noteUtils.ts  pitchDetection.ts  pitchDetectionWasm.ts
