[package]
name = "pitch-detector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "AudioContext", "AnalyserNode", "MediaStreamAudioSourceNode"] }
js-sys = "0.3"
console_error_panic_hook = "0.1" 